@@ -68,14 +68,17 @@ extern int assignar_adr_internet(int sock,char *host,unsigned short n_port);
 extern int cerrar_socket(int s);
 extern void init_network_tables(void);
 
-extern int z_sock_open_connection(char *host,int port,int use_ssl);
+extern int z_sock_open_connection(char *host,int port,int use_ssl,char *ssl_sni_host_name);
 extern int z_sock_close_connection(int indice_tabla);
 extern int z_sock_free_connection(int indice_tabla);
 extern int z_sock_read(int indice_tabla, z80_byte *buffer, int longitud);
 extern int z_sock_write_string(int indice_tabla, char *buffer);
 extern int zsock_wait_until_command_prompt(int indice_tabla);
 extern int zsock_read_all_until_command(int indice_tabla,z80_byte *buffer,int max_buffer,int *posicion_command);
-extern int zsock_http(char *host, char *url,int *http_code,char **mem,int *t_leidos, char **mem_after_headers,int skip_headers,char *add_headers,int use_ssl,char *redirect_url,int estimated_max_size);
+
+extern int zsock_http(char *host, char *url,int *http_code,char **mem,int *t_leidos, char **mem_after_headers,int skip_headers,
+    char *add_headers,int use_ssl,char *redirect_url,int estimated_maximum_size, char *ssl_sni_host_name);
+    
 extern char *z_sock_get_error(int error);
 extern int z_sock_assign_socket(void);
 
