@@ -59,6 +59,7 @@ Fixed annoying flickering in menu using XWindows video driver
 Fixed loading General Sound rom
 Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks
 Fixed pixel color on text all-to-pixel text rendering (color inversion)
+Fixed downloads from spectrumcomputing
 
 Fixed CPC bugs:
 -Fixed vsync and hsync interrupts
